syntax = "proto3";

package geecachepb;

// 定义go生成后的包名
option go_package = "./;geecachepb";

message GetRequest {
  string group = 1;
  string key = 2;
}

message GetResponse {
  bytes value = 1;
  double minute_qps = 2;
  int64 expire = 3;
}

message SetRequest {
  string group = 1;
  string key = 2;
  bytes value = 3;
  int64 expire = 4;
}

service GeeCache {
  rpc Get(GetRequest) returns (GetResponse);
}